<resources>
    <string name="app_name">Auto Message One</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_fragment">Create Fragment</string>
    <string name="activated_fragment">Activated Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="auto_text">Auto Text</string>
    <string name="stop_ring_only">Stop Ring Only</string>
    <string name="schedule_message">Schedule Message</string>
    <string name="reminder">Reminder</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>


    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="create_message">Create Message</string>
    <string name="use_template">Use Template</string>

    <string name="create_or_select">Create Or Select</string>
    <string name="create_message_hint">Enter the message</string>

    <string name="set_your_message">Set your Message</string>
    <string name="set_mute_unmute">Set Mute Time</string>
    <string name="ok">Ok</string>
    <string name="time">Time</string>
    <string name="add_exception">Add Exception</string>
    <string name="select_message_services">Select Message Services</string>
    <string name="set_sound_profile">Set Sound Profile</string>

    <string name="a"> </string>

    <string name="add_exceptional_contact">Add Exceptional Contacts for Emergency</string>
    <string name="apply_to_specific">Apply to Specific</string>
    <string name="exception">Add Exception</string>

    <string name="enter_the_ring_silent_number">Enter number of Ring silent</string>

    <string name="number_of_ring_silent">Number of Ring Silent</string>
    <string name="contact_list">Contact List</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>

    <string name="sms">SMS</string>
    <string name="whatsapp">Whats App</string>
    <string name="telegram">Telegram</string>

    <string name="services">Services</string>
    <string name="add_session">Add Session</string>

    <string name="add_number_of_ring_silent">Add Number of ring silent</string>
    <string name="remove">Remove</string>
    <string name="selectContacts">Select Contacts</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="enterNoOfRing">Enter No. of ring silent</string>
    <string name="enter_no_of_message">Enter No. Of message to send</string>
    <string name="one">1</string>
    <string name="pick_date">Choose Date</string>
    <string name="enter_details">Enter details</string>
    <string name="media_volume">Media Volume</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="ring_volume">Ring Volume</string>
    <string name="phone">Phone</string>
</resources>