<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/exception"
            android:textAlignment="center"
            android:textColor="#393535"
            android:textColorHint="@color/black"
            android:textSize="38sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnAddExceptionalContacts"

                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:width="200dp"
                android:height="60dp"
                android:background="@drawable/custom_button3"
                android:text="@string/add_exceptional_contact"
                android:textColor="#696c69"
                android:textSize="12sp" />

            <Button
                android:id="@+id/applyToSpecific"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="200dp"
                android:height="60dp"
                android:background="@drawable/custom_button3"
                android:text="@string/apply_to_specific"
                android:textColor="#6a6d69" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/buttonOk3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button4"
            android:text="@string/ok"
            android:textColor="#FFF" />


    </LinearLayout>
</LinearLayout>