<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/textView234234"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@color/orange"
            android:gravity="center|left"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img234234"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/baseline_volume_mute_24"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60sp"
                        android:layout_marginBottom="-10dp"
                        android:layout_marginLeft="8dp"
                        android:gravity="left|center"
                        android:text="@string/ring_volume"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/tv_show_media_volume_percentage"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:layout_marginBottom="-10dp"
                        android:layout_marginLeft="8dp"
                        android:gravity="left|center"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:layout_editor_absoluteX="0dp" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar_media_volume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:progress="90" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_select_ringtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img2334344234"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/baseline_music_note_24" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="left|center"
                    android:text="@string/select_ringtone"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/tv_show_selected_ringtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:text="">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_save_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:layout_margin="2dp"
                android:layout_weight="1"/>


            <Button
                android:id="@+id/btn_discard_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"

                android:text="@string/save"
                android:layout_weight="1"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


