<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/enterNoOfRing"
            android:textAlignment="center"
            android:textColor="#393535"
            android:textColorHint="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button4"
                android:ems="10"
                android:inputType="number"
                android:visibility="gone" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_spinner_background"
                android:padding="20dp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtInputForRingSilent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/enter_the_ring_silent_number"
                android:textColor="#434040"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edtInputForRingSilent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:width="60dp"
                android:ems="10"
                android:inputType="number"
                android:text="2"
                android:textColor="#252222"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonOkStopRingOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button4"
            android:text="@string/ok"
            android:textColor="#FFF" />


    </LinearLayout>

</LinearLayout>